@@ -54,6 +54,8 @@ GridEdger *gridedgerLengthToS(GridEdger *, double segment, double length,
 GridEdger *gridedgerDiscretize(GridEdger *, double length );
 GridEdger *gridedgerDiscretizeEvenly(GridEdger * );
 
+GridEdger *gridedgerInsert(GridEdger *);
+
 END_C_DECLORATION
 
 #endif /* GRIDEDGER_H */
